--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
+    "react-router-dom": "^7.11.0",
     "web-vitals": "^5.1.0"
   },
   "devDependencies": {
